src/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    GREATER
    HASH
    LESS

Grammar

Rule 0     S' -> program
Rule 1     program -> operation
Rule 2     program -> program operation
Rule 3     operation -> expr end
Rule 4     operation -> assign end
Rule 5     operation -> fcall end
Rule 6     operation -> return end
Rule 7     operation -> end
Rule 8     expr -> limit
Rule 9     expr -> derivate
Rule 10    expr -> factorial
Rule 11    expr -> abs
Rule 12    abs -> OR expr OR
Rule 13    return -> RETURN expr
Rule 14    factorial -> expr FACTOR
Rule 15    derivate -> expr QUOTE
Rule 16    limit -> LIM ANGLE_OPEN to ANGLE_CLOSE expr
Rule 17    to -> id ARROW_RIGHT expr
Rule 18    expr -> fcall
Rule 19    fcall -> id PAREN_OPEN params PAREN_CLOSE
Rule 20    fcall -> id PAREN_OPEN PAREN_CLOSE
Rule 21    params -> expr
Rule 22    params -> params COMMA expr
Rule 23    assign -> fcall ASSIGN CURLY_OPEN CURLY_CLOSE
Rule 24    assign -> fcall ASSIGN CURLY_OPEN program CURLY_CLOSE
Rule 25    assign -> id ASSIGN expr
Rule 26    assign -> fcall ASSIGN expr
Rule 27    expr -> expr PLUS expr
Rule 28    expr -> expr MINUS expr
Rule 29    expr -> expr MUL expr
Rule 30    expr -> expr DIV expr
Rule 31    expr -> expr EXPON expr
Rule 32    expr -> value
Rule 33    expr -> expr id
Rule 34    expr -> PAREN_OPEN expr PAREN_CLOSE
Rule 35    value -> MINUS value
Rule 36    value -> STRING
Rule 37    value -> id
Rule 38    value -> bool
Rule 39    id -> ID
Rule 40    bool -> TRUE
Rule 41    bool -> FALSE
Rule 42    value -> number
Rule 43    value -> float
Rule 44    number -> INTEGER
Rule 45    float -> INTEGER DOT INTEGER
Rule 46    end -> SEMICOLON
Rule 47    end -> NEWLINE

Terminals, with rules where they appear

ANGLE_CLOSE          : 16
ANGLE_OPEN           : 16
ARROW_RIGHT          : 17
ASSIGN               : 23 24 25 26
COMMA                : 22
CURLY_CLOSE          : 23 24
CURLY_OPEN           : 23 24
DIV                  : 30
DOT                  : 45
EXPON                : 31
FACTOR               : 14
FALSE                : 41
GREATER              : 
HASH                 : 
ID                   : 39
INTEGER              : 44 45 45
LESS                 : 
LIM                  : 16
MINUS                : 28 35
MUL                  : 29
NEWLINE              : 47
OR                   : 12 12
PAREN_CLOSE          : 19 20 34
PAREN_OPEN           : 19 20 34
PLUS                 : 27
QUOTE                : 15
RETURN               : 13
SEMICOLON            : 46
STRING               : 36
TRUE                 : 40
error                : 

Nonterminals, with rules where they appear

abs                  : 11
assign               : 4
bool                 : 38
derivate             : 9
end                  : 3 4 5 6 7
expr                 : 3 12 13 14 15 16 17 21 22 25 26 27 27 28 28 29 29 30 30 31 31 33 34
factorial            : 10
fcall                : 5 18 23 24 26
float                : 43
id                   : 17 19 20 25 33 37
limit                : 8
number               : 42
operation            : 1 2
params               : 19 22
program              : 2 24 0
return               : 6
to                   : 16
value                : 32 35


state 0

    (0) S' -> . program
    (1) program -> . operation
    (2) program -> . program operation
    (3) operation -> . expr end
    (4) operation -> . assign end
    (5) operation -> . fcall end
    (6) operation -> . return end
    (7) operation -> . end
    (8) expr -> . limit
    (9) expr -> . derivate
    (10) expr -> . factorial
    (11) expr -> . abs
    (18) expr -> . fcall
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MUL expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr EXPON expr
    (32) expr -> . value
    (33) expr -> . expr id
    (34) expr -> . PAREN_OPEN expr PAREN_CLOSE
    (23) assign -> . fcall ASSIGN CURLY_OPEN CURLY_CLOSE
    (24) assign -> . fcall ASSIGN CURLY_OPEN program CURLY_CLOSE
    (25) assign -> . id ASSIGN expr
    (26) assign -> . fcall ASSIGN expr
    (19) fcall -> . id PAREN_OPEN params PAREN_CLOSE
    (20) fcall -> . id PAREN_OPEN PAREN_CLOSE
    (13) return -> . RETURN expr
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE
    (16) limit -> . LIM ANGLE_OPEN to ANGLE_CLOSE expr
    (15) derivate -> . expr QUOTE
    (14) factorial -> . expr FACTOR
    (12) abs -> . OR expr OR
    (35) value -> . MINUS value
    (36) value -> . STRING
    (37) value -> . id
    (38) value -> . bool
    (42) value -> . number
    (43) value -> . float
    (39) id -> . ID
    (40) bool -> . TRUE
    (41) bool -> . FALSE
    (44) number -> . INTEGER
    (45) float -> . INTEGER DOT INTEGER

    PAREN_OPEN      shift and go to state 15
    RETURN          shift and go to state 16
    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18
    LIM             shift and go to state 19
    OR              shift and go to state 20
    MINUS           shift and go to state 12
    STRING          shift and go to state 21
    ID              shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    INTEGER         shift and go to state 28

    program                        shift and go to state 1
    operation                      shift and go to state 2
    expr                           shift and go to state 3
    end                            shift and go to state 4
    assign                         shift and go to state 5
    fcall                          shift and go to state 6
    return                         shift and go to state 7
    limit                          shift and go to state 8
    derivate                       shift and go to state 9
    factorial                      shift and go to state 10
    abs                            shift and go to state 11
    value                          shift and go to state 13
    id                             shift and go to state 14
    bool                           shift and go to state 22
    number                         shift and go to state 23
    float                          shift and go to state 24

state 1

    (0) S' -> program .
    (2) program -> program . operation
    (3) operation -> . expr end
    (4) operation -> . assign end
    (5) operation -> . fcall end
    (6) operation -> . return end
    (7) operation -> . end
    (8) expr -> . limit
    (9) expr -> . derivate
    (10) expr -> . factorial
    (11) expr -> . abs
    (18) expr -> . fcall
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MUL expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr EXPON expr
    (32) expr -> . value
    (33) expr -> . expr id
    (34) expr -> . PAREN_OPEN expr PAREN_CLOSE
    (23) assign -> . fcall ASSIGN CURLY_OPEN CURLY_CLOSE
    (24) assign -> . fcall ASSIGN CURLY_OPEN program CURLY_CLOSE
    (25) assign -> . id ASSIGN expr
    (26) assign -> . fcall ASSIGN expr
    (19) fcall -> . id PAREN_OPEN params PAREN_CLOSE
    (20) fcall -> . id PAREN_OPEN PAREN_CLOSE
    (13) return -> . RETURN expr
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE
    (16) limit -> . LIM ANGLE_OPEN to ANGLE_CLOSE expr
    (15) derivate -> . expr QUOTE
    (14) factorial -> . expr FACTOR
    (12) abs -> . OR expr OR
    (35) value -> . MINUS value
    (36) value -> . STRING
    (37) value -> . id
    (38) value -> . bool
    (42) value -> . number
    (43) value -> . float
    (39) id -> . ID
    (40) bool -> . TRUE
    (41) bool -> . FALSE
    (44) number -> . INTEGER
    (45) float -> . INTEGER DOT INTEGER

    PAREN_OPEN      shift and go to state 15
    RETURN          shift and go to state 16
    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18
    LIM             shift and go to state 19
    OR              shift and go to state 20
    MINUS           shift and go to state 12
    STRING          shift and go to state 21
    ID              shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    INTEGER         shift and go to state 28

    operation                      shift and go to state 29
    expr                           shift and go to state 3
    end                            shift and go to state 4
    assign                         shift and go to state 5
    fcall                          shift and go to state 6
    return                         shift and go to state 7
    limit                          shift and go to state 8
    derivate                       shift and go to state 9
    factorial                      shift and go to state 10
    abs                            shift and go to state 11
    value                          shift and go to state 13
    id                             shift and go to state 14
    bool                           shift and go to state 22
    number                         shift and go to state 23
    float                          shift and go to state 24

state 2

    (1) program -> operation .

    PAREN_OPEN      reduce using rule 1 (program -> operation .)
    RETURN          reduce using rule 1 (program -> operation .)
    SEMICOLON       reduce using rule 1 (program -> operation .)
    NEWLINE         reduce using rule 1 (program -> operation .)
    LIM             reduce using rule 1 (program -> operation .)
    OR              reduce using rule 1 (program -> operation .)
    MINUS           reduce using rule 1 (program -> operation .)
    STRING          reduce using rule 1 (program -> operation .)
    ID              reduce using rule 1 (program -> operation .)
    TRUE            reduce using rule 1 (program -> operation .)
    FALSE           reduce using rule 1 (program -> operation .)
    INTEGER         reduce using rule 1 (program -> operation .)
    $end            reduce using rule 1 (program -> operation .)
    CURLY_CLOSE     reduce using rule 1 (program -> operation .)


state 3

    (3) operation -> expr . end
    (27) expr -> expr . PLUS expr
    (28) expr -> expr . MINUS expr
    (29) expr -> expr . MUL expr
    (30) expr -> expr . DIV expr
    (31) expr -> expr . EXPON expr
    (33) expr -> expr . id
    (15) derivate -> expr . QUOTE
    (14) factorial -> expr . FACTOR
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE
    (39) id -> . ID

    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    MUL             shift and go to state 33
    DIV             shift and go to state 34
    EXPON           shift and go to state 35
    QUOTE           shift and go to state 37
    FACTOR          shift and go to state 38
    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18
    ID              shift and go to state 25

    end                            shift and go to state 30
    id                             shift and go to state 36

state 4

    (7) operation -> end .

    PAREN_OPEN      reduce using rule 7 (operation -> end .)
    RETURN          reduce using rule 7 (operation -> end .)
    SEMICOLON       reduce using rule 7 (operation -> end .)
    NEWLINE         reduce using rule 7 (operation -> end .)
    LIM             reduce using rule 7 (operation -> end .)
    OR              reduce using rule 7 (operation -> end .)
    MINUS           reduce using rule 7 (operation -> end .)
    STRING          reduce using rule 7 (operation -> end .)
    ID              reduce using rule 7 (operation -> end .)
    TRUE            reduce using rule 7 (operation -> end .)
    FALSE           reduce using rule 7 (operation -> end .)
    INTEGER         reduce using rule 7 (operation -> end .)
    $end            reduce using rule 7 (operation -> end .)
    CURLY_CLOSE     reduce using rule 7 (operation -> end .)


state 5

    (4) operation -> assign . end
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE

    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18

    end                            shift and go to state 39

state 6

    (5) operation -> fcall . end
    (18) expr -> fcall .
    (23) assign -> fcall . ASSIGN CURLY_OPEN CURLY_CLOSE
    (24) assign -> fcall . ASSIGN CURLY_OPEN program CURLY_CLOSE
    (26) assign -> fcall . ASSIGN expr
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
    PLUS            reduce using rule 18 (expr -> fcall .)
    MINUS           reduce using rule 18 (expr -> fcall .)
    MUL             reduce using rule 18 (expr -> fcall .)
    DIV             reduce using rule 18 (expr -> fcall .)
    EXPON           reduce using rule 18 (expr -> fcall .)
    QUOTE           reduce using rule 18 (expr -> fcall .)
    FACTOR          reduce using rule 18 (expr -> fcall .)
    ID              reduce using rule 18 (expr -> fcall .)
    ASSIGN          shift and go to state 41
    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18

  ! SEMICOLON       [ reduce using rule 18 (expr -> fcall .) ]
  ! NEWLINE         [ reduce using rule 18 (expr -> fcall .) ]

    end                            shift and go to state 40

state 7

    (6) operation -> return . end
    (46) end -> . SEMICOLON
    (47) end -> . NEWLINE

    SEMICOLON       shift and go to state 17
    NEWLINE         shift and go to state 18

    end                            shift and go to state 42

state 8

    (8) expr -> limit .

    PLUS            reduce using rule 8 (expr -> limit .)
    MINUS           reduce using rule 8 (expr -> limit .)
    MUL             reduce using rule 8 (expr -> limit .)
    DIV             reduce using rule 8 (expr -> limit .)
    EXPON           reduce using rule 8 (expr -> limit .)
    QUOTE           reduce using rule 8 (expr -> limit .)
    FACTOR          reduce using rule 8 (expr -> limit .)
    SEMICOLON       reduce using rule 8 (expr -> limit .)
    NEWLINE         reduce using rule 8 (expr -> limit .)
    ID              reduce using rule 8 (expr -> limit .)
    PAREN_CLOSE     reduce using rule 8 (expr -> limit .)
    OR              reduce using rule 8 (expr -> limit .)
    COMMA           reduce using rule 8 (expr -> limit .)
    ANGLE_CLOSE     reduce using rule 8 (expr -> limit .)


state 9

    (9) expr -> derivate .

    PLUS            reduce using rule 9 (expr -> derivate .)
    MINUS           reduce using rule 9 (expr -> derivate .)
    MUL             reduce using rule 9 (expr -> derivate .)
    DIV             reduce using rule 9 (expr -> derivate .)
    EXPON           reduce using rule 9 (expr -> derivate .)
    QUOTE           reduce using rule 9 (expr -> derivate .)
    FACTOR          reduce using rule 9 (expr -> derivate .)
    SEMICOLON       reduce using rule 9 (expr -> derivate .)
    NEWLINE         reduce using rule 9 (expr -> derivate .)
    ID              reduce using rule 9 (expr -> derivate .)
    PAREN_CLOSE     reduce using rule 9 (expr -> derivate .)
    OR              reduce using rule 9 (expr -> derivate .)
    COMMA           reduce using rule 9 (expr -> derivate .)
    ANGLE_CLOSE     reduce using rule 9 (expr -> derivate .)


state 10

    (10) expr -> factorial .

    PLUS            reduce using rule 10 (expr -> factorial .)
    MINUS           reduce using rule 10 (expr -> factorial .)
    MUL             reduce using rule 10 (expr -> factorial .)
    DIV             reduce using rule 10 (expr -> factorial .)
    EXPON           reduce using rule 10 (expr -> factorial .)
    QUOTE           reduce using rule 10 (expr -> factorial .)
    FACTOR          reduce using rule 10 (expr -> factorial .)
    SEMICOLON       reduce using rule 10 (expr -> factorial .)
    NEWLINE         reduce using rule 10 (expr -> factorial .)
    ID              reduce using rule 10 (expr -> factorial .)
    PAREN_CLOSE     reduce using rule 10 (expr -> factorial .)
    OR              reduce using rule 10 (expr -> factorial .)
    COMMA           reduce using rule 10 (expr -> factorial .)
    ANGLE_CLOSE     reduce using rule 10 (expr -> factorial .)


state 11

    (11) expr -> abs .

    PLUS            reduce using rule 11 (expr -> abs .)
    MINUS           reduce using rule 11 (expr -> abs .)
    MUL             reduce using rule 11 (expr -> abs .)
    DIV             reduce using rule 11 (expr -> abs .)
    EXPON           reduce using rule 11 (expr -> abs .)
    QUOTE           reduce using rule 11 (expr -> abs .)
    FACTOR          reduce using rule 11 (expr -> abs .)
    SEMICOLON       reduce using rule 11 (expr -> abs .)
    NEWLINE         reduce using rule 11 (expr -> abs .)
    ID              reduce using rule 11 (expr -> abs .)
    PAREN_CLOSE     reduce using rule 11 (expr -> abs .)
    OR              reduce using rule 11 (expr -> abs .)
    COMMA           reduce using rule 11 (expr -> abs .)
    ANGLE_CLOSE     reduce using rule 11 (expr -> abs .)


state 12

    (35) value -> MINUS . value
    (35) value -> . MINUS value
    (36) value -> . STRING
    (37) value -> . id
    (38) value -> . bool
    (42) value -> . number
    (43) value -> . float
    (39) id -> . ID
    (40) bool -> . TRUE
    (41) bool -> . FALSE
    (44) number -> . INTEGER
    (45) float -> . INTEGER DOT INTEGER

    MINUS           shift and go to state 12
    STRING          shift and go to state 21
    ID              shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    INTEGER         shift and go to state 28

    value                          shift and go to state 43
    id                             shift and go to state 44
    bool                           shift and go to state 22
    number                         shift and go to state 23
    float                          shift and go to state 24

state 13

    (32) expr -> value .

    PLUS            reduce using rule 32 (expr -> value .)
    MINUS           reduce using rule 32 (expr -> value .)
    MUL             reduce using rule 32 (expr -> value .)
    DIV             reduce using rule 32 (expr -> value .)
    EXPON           reduce using rule 32 (expr -> value .)
    QUOTE           reduce using rule 32 (expr -> value .)
    FACTOR          reduce using rule 32 (expr -> value .)
    SEMICOLON       reduce using rule 32 (expr -> value .)
    NEWLINE         reduce using rule 32 (expr -> value .)
    ID              reduce using rule 32 (expr -> value .)
    PAREN_CLOSE     reduce using rule 32 (expr -> value .)
    OR              reduce using rule 32 (expr -> value .)
    COMMA           reduce using rule 32 (expr -> value .)
    ANGLE_CLOSE     reduce using rule 32 (expr -> value .)


state 14

    (25) assign -> id . ASSIGN expr
    (19) fcall -> id . PAREN_OPEN params PAREN_CLOSE
    (20) fcall -> id . PAREN_OPEN PAREN_CLOSE
    (37) value -> id .

    ASSIGN          shift and go to state 45
    PAREN_OPEN      shift and go to state 46
    PLUS            reduce using rule 37 (value -> id .)
    MINUS           reduce using rule 37 (value -> id .)
    MUL             reduce using rule 37 (value -> id .)
    DIV             reduce using rule 37 (value -> id .)
    EXPON           reduce using rule 37 (value -> id .)
    QUOTE           reduce using rule 37 (value -> id .)
    FACTOR          reduce using rule 37 (value -> id .)
    SEMICOLON       reduce using rule 37 (value -> id .)
    NEWLINE         reduce using rule 37 (value -> id .)
    ID              reduce using rule 37 (value -> id .)


state 15

    (34) expr -> PAREN_OPEN . expr PAREN_CLOSE
    (8) expr -> . limit
    (9) expr -> . derivate
    (10) expr -> . factorial
    (11) expr -> . abs
    (18) expr -> . fcall
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MUL expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr EXPON expr
    (32) expr -> . value
    (33) expr -> . expr id
    (34) expr -> . PAREN_OPEN expr PAREN_CLOSE
    (16) limit -> . LIM ANGLE_OPEN to ANGLE_CLOSE expr
    (15) derivate -> . expr QUOTE
    (14) factorial -> . expr FACTOR
    (12) abs -> . OR expr OR
    (19) fcall -> . id PAREN_OPEN params PAREN_CLOSE
    (20) fcall -> . id PAREN_OPEN PAREN_CLOSE
    (35) value -> . MINUS value
    (36) value -> . STRING
    (37) value -> . id
    (38) value -> . bool
    (42) value -> . number
    (43) value -> . float
    (39) id -> . ID
    (40) bool -> . TRUE
    (41) bool -> . FALSE
    (44) number -> . INTEGER
    (45) float -> . INTEGER DOT INTEGER

    PAREN_OPEN      shift and go to state 15
    LIM             shift and go to state 19
    OR              shift and go to state 20
    MINUS           shift and go to state 12
    STRING          shift and go to state 21
    ID              shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    INTEGER         shift and go to state 28

    expr                           shift and go to state 47
    limit                          shift and go to state 8
    derivate                       shift and go to state 9
    factorial                      shift and go to state 10
    abs                            shift and go to state 11
    fcall                          shift and go to state 48
    value                          shift and go to state 13
    id                             shift and go to state 49
    bool                           shift and go to state 22
    number                         shift and go to state 23
    float                          shift and go to state 24

state 16

    (13) return -> RETURN . expr
    (8) expr -> . limit
    (9) expr -> . derivate
    (10) expr -> . factorial
    (11) expr -> . abs
    (18) expr -> . fcall
    (27) expr -> . expr PLUS expr
    (28) expr -> . expr MINUS expr
    (29) expr -> . expr MUL expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr EXPON expr
    (32) expr -> . value
    (33) expr -> . expr id
    (34) expr -> . PAREN_OPEN expr PAREN_CLOSE
    (16) limit -> . LIM ANGLE_OPEN to ANGLE_CLOSE expr
    (15) derivate -> . expr QUOTE
    (14) factorial -> . expr FACTOR
    (12) abs -> . OR expr OR
    (19) fcall -> . id PAREN_OPEN params PAREN_CLOSE
    (20) fcall -> . id PAREN_OPEN PAREN_CLOSE
    (35) value -> . MINUS value
    (36) value -> . STRING
    (37) value -> . id
    (38) value -> . bool
    (42) value -> . number
    (43) value -> . float
    (39) id -> . ID
    (40) bool -> . TRUE
    (41) bool -> . FALSE
    (44) number -> . INTEGER
    (45) float -> . INTEGER DOT INTEGER

    PAREN_OPEN      shift and go to state 15
    LIM             shift and go to state 19
    OR              shift and go to state 20
    MINUS           shift and go to state 12
    STRING          shift and go to state 21
    ID              shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27
    INTEGER         shift and go to state 28

    expr                           shift and go to state 50
    limit                          shift and go to state 8
    derivate                       shift and go to state 9
    factorial                      shift and go to state 10
    abs                            shift and go to state 11
    fcall                          shift and go to state 48
    value                          shift and go to state 13
    id                             shift and go to state 49
    bool                           shift and go to state 22
    number                         shift and go to state 23
    float                          shift and go to state 24

state 17

    (46) end -> SEMICOLON .

    PAREN_OPEN      reduce using rule 46 (end -> SEMICOLON .)
    RETURN          reduce using rule 46 (end -> SEMICOLON .)
    SEMICOLON       reduce using rule 46 (end -> SEMICOLON .)
    NEWLINE         reduce using rule 46 (end -> SEMICOLON .)
    LIM             reduce using rule 46 (end -> SEMICOLON .)
    OR              reduce using rule 46 (end -> SEMICOLON .)
    MINUS           reduce using rule 46 (end -> SEMICOLON .)
    STRING          reduce using rule 46 (end -> SEMICOLON .)
    ID              reduce using rule 46 (end -> SEMICOLON .)
    TRUE            reduce using rule 46 (end -> SEMICOLON .)
    FALSE           reduce using rule 46 (end -> SEMICOLON .)
    INTEGER         reduce using rule 46 (end -> SEMICOLON .)
    $end            reduce using rule 46 (end -> SEMICOLON .)
    CURLY_CLOSE     reduce using rule 46 (end -> SEMICOLON .)


state 18

    (47) end -> NEWLINE .

    PAREN_OPEN      reduce using rule 47 (end -> NEWLINE .)
    RETURN          reduce using rule 47 (end -> NEWLINE .)
    SEMICOLON       reduce using rule 47 (end -> NEWLINE .)
    NEWLINE         reduce using rule 47 (end -> NEWLINE .)
    LIM             reduce using rule 47 (end -> NEWLINE .)
    OR              reduce using rule 47 (end -> NEWLINE .)
    MINUS           reduce using rule 47 (end -> NEWLINE .)
    STRING          reduce using rule 47 (end -> NEWLINE .)
    ID              reduce using rule 47 (end -> NEWLINE .)
    TRUE            reduce using rule 47 (end -> NEWLINE .)
    FALSE           reduce using rule 47 (end -> NEWLINE .)
    INTEGER         reduce using rule 47 (end -> NEWLINE .)
    $end            reduce using rule 47 (end -> NEWLINE .)
    CURLY_CLOSE     reduce using rule 47 (end -> NEWLINE .)


state 19

    (16) limit -> LIM . ANGLE_OPEN to ANGLE_CLOSE expr

    ANGLE_OPEN      shift and go to state 51


state 20
